HeartIntel-AI-Powered-Heart-Disease-Prediction-main/devops-submission/k8s/namespace-config-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heart-disease-prod
